--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: https://silenteh.com
+url: http://silenteh.github.io
 title: Cryptography and infosec
 subtitle: 
 author: Silenteh
